--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     </intent>
   </queries>
   <application
-    android:label="روايات"
+    android:label="روايات الكاتب اسلام محمود"
     android:requestLegacyExternalStorage="true"
     android:networkSecurityConfig="@xml/network_security_config"
     android:name="${applicationName}"
