--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = rwayat
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.rawyat4likeyou.rawyat
+PRODUCT_BUNDLE_IDENTIFIER = com.rawyat4likeyou2.rawyat
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
