--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_launcher_icons: ^0.13.1
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
   go_router: ^13.1.0
@@ -53,18 +52,13 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   permission_handler: ^11.3.0
   stack_appodeal_flutter: ^3.2.1
+  url_launcher: ^6.2.4
   webview_flutter: ^4.5.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-flutter_launcher_icons:
-  android: true
-  ios: true
-  image_path: "assets/images/1212.jpg"
-  min_sdk_android: 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
